# testing-pytorch-extensions

./: .gitignore
num-add-lib/: README.md  pyproject.toml
num-add-lib/src/: test_custom_class.py
num-add-lib/src/num_add_lib/: __init__.py  cpp_extension_utils.py  num_add.py
num-add-lib/src/num_add_lib/cpp_extension_templates/: jinja_utils.py  num_add_backward_x_ext.cpp.jinja2  num_add_ext.cpp.jinja2  num_add_ext_autograd.cpp.jinja2
