[project]
name = "num-add-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asglover", email = "140220574+asglover@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "setuptools>=80.10.1",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
log_cli = true
